成功调用Qwen大模型

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,19 @@
-# OpenAI API配置（请替换为您的实际API密钥）
+# OpenAI API配置（保留兼容性）
 OPENAI_API_KEY=sk-test-placeholder-key
+
+# 智谱AI配置（推荐使用，中文支持更好）
+ZHIPU_API_KEY=your-zhipu-api-key-here
+
+# 通义千问配置
+QWEN_API_KEY=sk-cc26daf2c892481db3999ea6d5c51338
+
+# 百度语音配置
+BAIDU_APP_ID=
+BAIDU_API_KEY=
+BAIDU_SECRET_KEY=
+
+# LLM服务选择："openai" 或 "zhipu" 或 "qwen"
+LLM_PROVIDER=qwen
 
 # 数据库配置（暂时使用SQLite作为测试）
 DATABASE_URL=sqlite:///./test.db
