--- a/backend/.env
+++ b/backend/.env
@@ -7,6 +7,15 @@ ZHIPU_API_KEY=your-zhipu-api-key-here
 # 通义千问配置
 QWEN_API_KEY=sk-cc26daf2c892481db3999ea6d5c51338
 
+# 讯飞语音配置
+XUNFEI_API_KEY=sk-v39IXtupcM3m5aOB13B57c899a9b4fA1A2F625FcEc86C533
+XUNFEI_APP_ID=your-xunfei-app-id
+XUNFEI_API_SECRET=your-xunfei-api-secret
+
+# 语音服务选择："openai", "baidu", "xunfei"
+ASR_PROVIDER=xunfei
+TTS_PROVIDER=xunfei
+
 # 百度语音配置
 BAIDU_APP_ID=
 BAIDU_API_KEY=
